# aiscript

./: Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml  main.ai  mkdocs.yml  project.toml  publish.sh  route.ai
.cargo/: config.toml
.github/workflows/: cargo-test.yaml  deploy-docs.yaml  release.yaml
aiscript/: Cargo.toml
aiscript-api/: Cargo.toml
aiscript-arena/: Cargo.toml
aiscript-arena/src/: allocator_api.rs  arena.rs  barrier.rs  collect.rs  collect_impl.rs  context.rs  dynamic_roots.rs  gc.rs  gc_weak.rs  lib.rs  lock.rs  static_collect.rs  types.rs  unsize.rs
aiscript-cli/: Cargo.toml
aiscript-cli/src/: main.rs  repr.rs
aiscript-cli/src/config/: db.rs  mod.rs  security.rs
aiscript-common/: Cargo.toml
aiscript-common/src/: lib.rs
aiscript-derived/: Cargo.toml
aiscript-derived/src/: lib.rs
aiscript-directive/: Cargo.toml
aiscript-directive/src/: ast.rs  lib.rs
aiscript-directive/src/route/: docs.rs  mod.rs
aiscript-directive/src/validator/: array.rs  date.rs  format.rs  mod.rs  regex.rs
aiscript-lexer/: Cargo.toml
aiscript-lexer/src/: character_tests.rs  error_reporter.rs  fstring_tests.rs  lib.rs  peakable.rs  tests.rs
aiscript-runtime/: Cargo.toml
aiscript-runtime/src/: endpoint.rs  error.rs  grammar.lalrpop  lalrpop_helpers.rs  lexer.rs  lib.rs  main.rs  parser.rs  template.rs  utils.rs
aiscript-runtime/src/ast/: mod.rs
aiscript-runtime/src/config/: auth.rs  db.rs  mod.rs  security.rs  sso.rs  tests.rs
aiscript-runtime/src/dsl/: mod.rs
aiscript-runtime/src/openapi/: generate.rs  mod.rs  redoc.html  swagger.html
aiscript-runtime/src/sso/: mod.rs
aiscript-runtime/src/validator/: mod.rs
aiscript-vm/: Cargo.toml
aiscript-vm/src/: agent.rs  ai.rs  ast.rs  builtins.rs  chunk.rs  codegen.rs  compiler.rs  lexer.rs  lib.rs  module.rs  object.rs  parser.rs  pretty.rs  scanner.rs  string.rs  value.rs  vm.rs
aiscript-vm/src/ai/: agent.rs  mod.rs  prompt.rs
aiscript-vm/src/ast/: mod.rs  pretty.rs
aiscript-vm/src/builtins/: array.rs  convert.rs  error.rs  format.rs  function.rs  mod.rs  print.rs  response.rs  sso.rs  string.rs
aiscript-vm/src/compiler/: ast.rs  codegen.rs  lexer.rs  mod.rs  parser.rs  pretty.rs
aiscript-vm/src/compiler/lexer/: character_tests.rs  mod.rs  tests.rs
aiscript-vm/src/compiler/optimizer/: dead_code.rs  mod.rs  pop_combine.rs
aiscript-vm/src/compiler/ty/: mod.rs
aiscript-vm/src/lexer/: character_tests.rs  mod.rs  tests.rs
aiscript-vm/src/parser/: expr_test.rs  mod.rs  stmt_test.rs
aiscript-vm/src/stdlib/: env.rs  http.rs  io.rs  math.rs  mod.rs  random.rs  serde.rs  str.rs  time.rs  web.rs
aiscript-vm/src/stdlib/auth/: jwt.rs  mod.rs
aiscript-vm/src/stdlib/db/: mod.rs  pg.rs  redis.rs  sqlite.rs
aiscript-vm/src/stdlib/sql/: mod.rs  pg.rs
aiscript-vm/src/string/: interned.rs  mod.rs  utils.rs
aiscript-vm/src/ty/: enum.rs  error.rs  mod.rs  resolver.rs
aiscript-vm/src/v1/: compiler.rs  mod.rs
aiscript-vm/src/vm/: extra.rs  mod.rs  state.rs
aiscript/src/: main.rs  project.rs  repr.rs
docs/: faq.md  index.md  installation.md  philosophy.md
docs/concepts/: middleware.md  model.md  overview.md  route.md  schema.md  validator.md
docs/get-started/: authentication.md  define-model.md  define-schema.md  setup.md  tweet-api.md  user-api.md
docs/references/: aim.md  directives.md  keywords.md  syntax.md  types.md
docs/references/configuration/: ai.md  database.md  observability.md
docs/references/stdlib/: prelude.md  security.md
examples/: agent.ai  agent.json  array.ai  claude.ai  constants.ai  enum.ai  env.ai  error_handle.ai  http.ai  lambda.ai  main.ai  ollama.ai  project.toml  redis.ai  serde.ai  sql.ai  test.ai  tuple.ai  user_math.ai  validation.ai
examples/lib/: llm.ai  utils.ai
examples/models/: follow.ai  tweet.ai  user.ai
examples/routes/: ai.ai  auth.ai  index.ai  path.ai  poc.ai  regex.ai  repo.ai  tweet.ai
examples/routes/nested/: gist.ai
examples/routes/user/: [id].ai
examples/schemas/: base.ai  user.ai
routes/: poc.ai  repo.ai  template-test.ai
routes/nested/: gist.ai
runtime/src/dsl/: validators.rs
templates/: hello-page.jinja
tests/: Cargo.toml  integration.rs
tests/integration/: helloworld.ai
tests/integration/ai/: ai_function.ai  ai_function_keyword.ai  ai_function_missing.ai  prompt.ai  unsupported_model.ai
tests/integration/array/: equality.ai  invalid_syntax.ai  normal.ai  single_element.ai
tests/integration/assignment/: global.ai  local.ai  prefix_operator.ai  to_self.ai  to_this.ai
tests/integration/block/: empty.ai
tests/integration/bool/: not.ai
tests/integration/break_continue/: break_syntax.ai  continue_syntax.ai  outside_loop.ai
tests/integration/builtin_functions/: ascii_chr_ord.ai  bin_hex_oct.ai  bool.ai  callable.ai  filter.ai  float.ai  format.ai  int.ai  invalid_arg_count.ai  map.ai  normal.ai  print.ai  str.ai  zip.ai
tests/integration/builtin_methods/: array.ai  string.ai
tests/integration/class/: inherit_self.ai  inherited_method.ai  local_inherit_other.ai  local_inherit_self.ai  local_reference_self.ai  methods.ai  reference_self.ai
tests/integration/class_fields/: class_as_type_hint.ai  empty_constructor.ai  explicit_constructor.ai  implicit_constructor.ai  syntax_error.ai
tests/integration/class_literal/: fields_checking.ai  initialize.ai
tests/integration/closure/: assign_to_closure.ai  assign_to_shadowed_later.ai  close_over_function_parameter.ai  close_over_later_variable.ai  close_over_method_parameter.ai  closed_closure_in_function.ai  nested_closure.ai  open_closure_in_function.ai  reference_closure_multiple_times.ai  reuse_closure_slot.ai  shadow_closure_with_local.ai  unused_closure.ai  unused_later_closure.ai
tests/integration/compound_assign/: add.ai  add_nonnum_num.ai  add_num_nonnum.ai  all.ai  divide.ai  divide_nonnum_num.ai  divide_num_nonnum.ai  minus.ai  minus_num_nonnum.ai  modulo.ai  modulo_nonnum_num.ai  modulo_num_nonnum.ai  (+4 more)
ui/: main.ai  subscriptions.ai  users.ai
vm/: Cargo.toml
vm/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+244 files in other folders)
