[workspace]
members = [
    "aiscript",
    "aiscript-cli",
    "aiscript-lexer",
    "aiscript-runtime",
    "aiscript-vm",
    "tests",
]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/aiscriptdev/aiscript"
license = "Apache-2.0"

[workspace.dependencies]

# RUSTFLAGS="-Z sanitizer=address" cargo run --release --target x86_64-apple-darwin -- test.ai
[profile.release]
debug = true
