[workspace]
members = [
    "aiscript",
    "aiscript-cli",
    "aiscript-lexer",
    "aiscript-directive",
    "aiscript-runtime",
    "aiscript-vm",
    "tests",
    "xtask",
]
exclude = []
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/aiscriptdev/aiscript"
license = "Apache-2.0"

[workspace.dependencies]

# RUSTFLAGS="-Z sanitizer=address" cargo run --release --target x86_64-apple-darwin -- test.ai
[profile.release]
debug = true
