[workspace]
members = [
    "aiscript",
    "aiscript-cli",
    "aiscript-lexer",
    "aiscript-arena",
    "aiscript-derived",
    "aiscript-directive",
    "aiscript-runtime",
    "aiscript-vm",
    "tests",
    "xtask",
]
exclude = ["assets", "examples", "routes", "tests", "xtask", "project.toml"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://aiscript.dev"
repository = "https://github.com/aiscriptdev/aiscript"
license = "MIT"
authors = ["Folyd lyshuhow@gmail.com"]
keywords = ["language", "interpreter", "scripting", "compiler", "vm"]
categories = ["compilers", "web-programming", "web-programming::http-server"]


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.29", features = ["aio", "tokio-comp"] }
reqwest = "0.12"

# RUSTFLAGS="-Z sanitizer=address" cargo run --release --target x86_64-apple-darwin -- test.ai
[profile.release]
debug = true
