[package]
name = "aiscript-arena"
description = "safe, incrementally garbage collected arenas"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
tracing = ["dep:tracing"]
allocator-api2 = ["dep:allocator-api2", "hashbrown?/allocator-api2"]

[dependencies]
allocator-api2 = { version = "0.2", optional = true, default-features = false, features = [
    "alloc",
] }
aiscript-derived = { path = "../aiscript-derived", version = "0.1.0" }
hashbrown = { version = "0.14", optional = true, default-features = false }
sptr = "0.3.2"
tracing = { version = "0.1.37", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
trybuild = "1.0"
