[package]
name = "aiscript-cli"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aiscript-vm = { path = "../aiscript-vm" }
aiscript-runtime = { path = "../aiscript-runtime" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
