[package]
name = "aiscript-cli"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
default-run = "aiscript-cli"

[[bin]]
name = "aiscript-cli"
path = "src/main.rs"

[[bin]]
name = "aiscript-cli-test"
path = "src/main.rs"
required-features = ["ai_test"]

[dependencies]
aiscript-vm = { path = "../aiscript-vm" }
aiscript-runtime = { path = "../aiscript-runtime" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
rustyline = "15.0"
dirs = "5.0"

[features]
ai_test = ["aiscript-vm/ai_test"]
