[package]
name = "aiscript-cli"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "aiscript"

[[bin]]
name = "aiscript"
path = "src/main.rs"

[[bin]]
name = "aiscript-test"
path = "src/main.rs"
required-features = ["ai_test"]

[dependencies]
aiscript-vm = { path = "../aiscript-vm" }
aiscript-runtime = { path = "../aiscript-runtime" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
rustyline = "15.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }

[features]
ai_test = ["aiscript-vm/ai_test"]
