[package]
name = "aiscript-derived"
description = "AIScript derived crate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.17", features = ["default", "visit-mut"] }
synstructure = "0.13"
