[package]
name = "aiscript-directive"
description = "Directives of AIScript programming language interpreter"
version.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
aiscript-lexer = { path = "../aiscript-lexer", version = "0.1.0" }
serde_json = "1.0"
