[package]
name = "aiscript-lexer"
description = "The lexer of AIScript programming language interpreter"
homepage.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
