[package]
name = "aiscript-runtime"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aiscript-lexer = { path = "../aiscript-lexer" }
aiscript-directive = { path = "../aiscript-directive" }
aiscript-vm = { path = "../aiscript-vm" }
hyper = "1.4.1"
hyper-util = "0.1.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.0"
http-body-util = "0.1.2"
bytes = "1.7.1"
axum = "0.7.5"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
jsonwebtoken = "9.3"
serde_json = "1.0.128"
thiserror = "1.0.65"
indexmap = { version = "2.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5"
notify = "7.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
redis = { version = "0.27.6", features = ["tokio-comp", "aio"] }
