[package]
name = "aiscript-runtime"
description = "The web runtime of AIScript programming language interpreter"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aiscript-lexer = { path = "../aiscript-lexer", version = "0.1.0" }
aiscript-directive = { path = "../aiscript-directive", version = "0.1.0" }
aiscript-vm = { path = "../aiscript-vm", version = "0.1.0" }
hyper = "1.6"
hyper-util = "0.1"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
http-body-util = "0.1"
bytes = "1.10"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
jsonwebtoken = "9.3"
serde_json.workspace = true
thiserror = "1.0"
indexmap = { version = "2.7", features = ["serde"] }
serde.workspace = true
walkdir = "2.5"
notify = "8.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
redis.workspace = true
toml = "0.8"
oas3 = "0.15"
reqwest.workspace = true
