[package]
name = "aiscript-vm"
description = "AIScript programming language interpreter"
version.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aiscript-lexer = { path = "../aiscript-lexer", version = "0.1.0" }
aiscript-directive = { path = "../aiscript-directive", version = "0.1.0" }
aiscript-arena = { path = "../aiscript-arena", features = [
    "allocator-api2",
    "hashbrown",
] }
# gc-arena = { git = "https://github.com/kyren/gc-arena", rev = "3dbc6c4263700312ef63ceee3f02943b38828130", features = [
#     "allocator-api2",
#     "hashbrown",
# ] }
ahash = "0.8"
hashbrown = { version = "0.14", features = ["raw"] }
openai-api-rs = { git = "https://github.com/aiscriptdev/openai-api-rs.git", branch = "main" }
num_enum = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.0" }
indexmap = "2.6.0"
chrono = "0.4.38"
regex = "1.11.1"
rand = "0.8.5"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
] }
redis = "0.27.6"
jsonwebtoken = "9.3"
reqwest = "0.12"
oauth2 = "5.0"

[features]
# Enable debug features
debug = []
# Enable optimizer features
optimizer = []
# For testing AI
ai_test = []
