[package]
name = "aiscript-vm"
description = "AIScript programming language interpreter"
version.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
aiscript-lexer = { path = "../aiscript-lexer", version = "0.1.0" }
aiscript-directive = { path = "../aiscript-directive", version = "0.1.0" }
aiscript-arena = { path = "../aiscript-arena", version = "0.1.0", features = [
    "allocator-api2",
    "hashbrown",
] }
# gc-arena = { git = "https://github.com/kyren/gc-arena", rev = "3dbc6c4263700312ef63ceee3f02943b38828130", features = [
#     "allocator-api2",
#     "hashbrown",
# ] }
# openai-api-rs = { git = "https://github.com/aiscriptdev/openai-api-rs.git", branch = "main" }
openai-api-rs = "6.0"
ahash = "0.8"
hashbrown = { version = "0.14", features = ["raw"] }
num_enum = "0.7.3"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.44" }
indexmap = "2.7"
chrono = "0.4"
regex = "1.11"
rand = "0.9"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
] }
redis.workspace = true
jsonwebtoken = "9.3"
reqwest.workspace = true
oauth2 = "5.0"

[features]
# Enable debug features
debug = []
# Enable optimizer features
optimizer = []
# For testing AI
ai_test = []
